@startuml

title __LOOPS's Class Diagram__\n

  namespace  {
    namespace oops {
      class loops.GameLoop {
          + GameLoop()
          + actionPerformed()
      }
    }
  }
  

  namespace  {
    namespace oops {
      class loops.GhostLoop {
          - counter : int
          - startTime : long
          - timeLost : long
          - times : long[]
          + GhostLoop()
          + actionPerformed()
          + resetTimeLost()
      }
    }
  }
  

  namespace  {
    namespace oops {
      class loops.PacmanLoop {
          + PacmanLoop()
          + actionPerformed()
      }
    }
  }
  

  loops.GameLoop .up.|> java.awt.event.ActionListener
  loops.GameLoop o-- logic.GameLogic : gameLogic
  loops.GhostLoop .up.|> java.awt.event.ActionListener
  loops.GhostLoop o-- sprites.State : backupState
  loops.GhostLoop o-- sprites.Ghost : ghost
  loops.PacmanLoop .up.|> java.awt.event.ActionListener
  loops.PacmanLoop o-- sprites.Pacman : pacman


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
